Improved Magnetic Field 010

--- a/MagneticField/MagneticField010/main.tex
+++ b/MagneticField/MagneticField010/main.tex
@@ -19,6 +19,7 @@
 \newcommand{\ee}{\end{equation}}
 \newcommand{\bea}{\begin{equation}\begin{array}}
 \newcommand{\eea}{\end{array}\end{equation}}
+\newcommand{\mybox}[1]{\fbox{\parbox{1.\textwidth}{#1}}}
 
 \newcommand{\pa}{\partial}
 \newcommand{\rot}{\textbf{rot}~}
@@ -29,6 +30,134 @@
 
 \begin{document}
 	\maketitle
+
+	\mybox{
+		\textbf{Восстановленно по чужим записям!}
+
+		Энергия доменной стенки на единицу площади 
+		($h$ - толщина пластинки, $d$ - период
+		доменной структуры, считаем $h \gg d$ -
+		границы пластинки не взаимодействуют):
+		\be
+			\label{eq158}
+			E_\text{w} = \sigma_\text{w}\frac{h}{d};
+		\ee
+		В таком случае энергия многодоменного 
+		ферромагнетика на единицу площади получится равной:
+		\be
+			\label{eq159}
+			E_\text{s} = E_\text{md} + E_\text{w} 
+				\approx 1.75 d M_0^2 +  \sigma_\text{w}\frac{h}{d};
+		\ee
+		Отыщем $d$ - для минимума $E_\text{s}$. Будем искать:
+		\be
+			\frac{\pa E_\text{s}}{\pa d} = 0;
+		\ee
+		В таком случае решением будет:
+		\be
+			\label{eq160}
+			d = \sqrt{\frac{\sigma_\text{w} h}{1.75 M_0^2}};
+		\ee
+
+		Равновесное значение энергии (на единицу площади)
+		в таком случае оказывается равным:
+		\be
+			\label{eq161}
+			E_\text{s} = 2 \sqrt{1.75 h \sigma_\text{w} M_0^2};
+		\ee
+		А на единицу объёма соответственно:
+		\be
+			\label{eq162}
+			E_\text{v} = E_\text{s} / h = 2 \sqrt{\frac{1.75 \sigma_\text{w} M_0^2}{h}};
+		\ee
+
+		Рассмотренная структура - пример доменной структуры 
+		с незамкнутым магнитным потоком, однако существуют структуры и с 
+		замкнутым, в том числе структуры Ландау-Лифшица.
+
+		Шестиугольники в толще, по краям - прямоугольные треугольники.
+		За счёт замкнутости  магнитостатическая энергия $=0$.
+		Однако энергия магнитокристаллографической анизотропии
+		$\neq 0$.
+
+		Для таких структур аналогично можно записать:
+		\be
+			\label{eq163}
+			E_\text{s} \approx \sigma_\text{w} \frac{h}{d} + \frac{Kd}{2};
+		\ee
+
+		Аналогично толщина, реализующая минимум энергии:
+		\be
+			\label{eq164}
+			d = \sqrt{\frac{2\sigma_\text{w} h}{K}};
+		\ee
+
+		Тогда энергия на единицу площади:
+		\be
+			\label{eq165}
+			E_\text{s} = \sqrt{2\sigma_\text{w} K h};
+		\ee
+
+		Объёмная плотность энергии:
+		\be
+			\label{eq166}
+			E_\text{v} = \frac{E_\text{s}}{h} = \sqrt{\frac{2\sigma_\text{w}K}{h}};
+		\ee
+
+		Необходимо сравнить - какая структура на самом деле реализуется
+		в равновесии: при сильном магнитном поле моожно добиться
+		того, что все домены сольются воедино. В таком масштабе полей
+		квантовые эффекты не наблюдаются - только их макроскопические проявления.
+		в противном случае необходимо рассматривать ураввнение Гейзенберга.
+	}
+
+	\mybox{
+		Рассмотрим случай анизотропного ферромагнетика
+		с лёгкой осью OZ. Его полная энергия (здесь $\vec{\mathcal H}_\text{M}$
+		- поле, созданное намагничченностью):
+		\be
+			\label{eq167}
+			E = \int \underbrace{\sum_{i=x,y,z}(\nabla \alpha_i)^2}_\text{Обменная энергия}
+			+ K \alpha_z^2 - 
+			\underbrace{\frac{1}{2}\vec{M}(\vec r)\vec{\mathcal H}_\text{M}(\vec r)}_\text{магнито-дипольная энергия} 
+			d^3 \vec r;
+		\ee
+
+		Если модуль намагниченности $\abs{\vec M(\vec r)} = M_0$ 
+		не изменяется вдоль образца, то виден характерный пространственный
+		масштаб:
+		\be
+			\label{eq168}
+			\lambda_1^2 = \frac{A}{\abs{K}};
+		\ee
+
+		При этом размерности прочих величин: 
+		$A\left[\frac{\text{эрг}}{\text{см}}\right];
+		~K\left[\frac{\text{эрг}}{\text{см}^3}\right],
+		~M_0^2\left[\frac{\text{эрг}}{\text{см}^3}\right]$.
+		По физическому смыслу $\lambda_1$ - контролирует
+		толщину доменной стенки.
+
+		По аналогии может быть и другая величина:
+		\be
+			\label{eq169}
+			\lambda_2^2 = \left(\frac{A}{M_0^2}\right)^3;
+		\ee
+
+		Если мы рассматриваем магнетик с $K \rightarrow 0$ - 
+		т.е. без выделенной анизотропии, тогда остаётся именно 
+		этот масштаб.
+
+		Очевидно, что если размеры ферромагнитной частицы $< \lambda_2$,
+		то существенная неоднородная намагничченность частицы даёт увеличение
+		обменной энергиии, превосходящее соответствующее такой
+		намагничченности уменьшение магнитостатичческой энергии.
+		Энергия последнегр ччлена будет убывать медленнее, чем расти
+		первый член. Будет происходить монодоменизация. Иначе говоря $\lambda_2$ - отвеччает за монодоменизацию
+		частицы в случае $\abs{K} \rightarrow 0$.
+	}
+
+	\vspace{1cm}
 
 	Рассмотрим 2-е сферические частицы одинакового радиуса $R$. Приготовленные из
 	ферромагнетика с изотропией "лёгкая ось". В отличие от предыдущего случая
